Tested with SSL/HTTPS